css/style.css
/* ... */
/*-------------------------------------
	1.2 owl dots button
-------------------------------------*/

.number-dot.owl-carousel .owl-dots {
	counter-reset: owl-dot;
	position: absolute;
	left: 50%;
	margin: 30px 0px;
	-webkit-transform: translateX(-50%);
	-moz-transform: translateX(-50%);
	-ms-transform: translateX(-50%);
	-o-transform: translateX(-50%);
}

.number-dot.owl-carousel .owl-dots .owl-dot {
	position: relative;
	list-style: none;
	display: block;
	height: 20px;
	line-height: 20px;
	text-align: center;
}

.number-dot.owl-carousel .owl-dots .owl-dot:before {
	content: counter(owl-dot, decimal);
	counter-increment: owl-dot;
	position: absolute;
	color: #141b1f;
	font-size: 16px;
	left: 5px;
	top: 0px;
	font-weight: 600;
}

.number-dot.owl-carousel .owl-dots .owl-dot span {
	background: none;
	border: none;
	margin: 0px;
}

.number-dot.owl-carousel .owl-dots .owl-dot {
	position: relative;
	overflow: hidden;
	display: inline-block
}

.number-dot.owl-carousel .owl-dots .owl-dot span {
	position: relative;
	left: 15px;
	top: 9px;
	height: 2px;
	border-radius: 0px;
	min-width: 10px;
	margin: 0px 2px;
	background: #c7b084;
	display: block;
	-webkit-backface-visibility: visible;
	-webkit-transition: opacity 200ms ease;
	-moz-transition: opacity 200ms ease;
	-ms-transition: opacity 200ms ease;
	-o-transition: opacity 200ms ease;
	transition: opacity 200ms ease;
	-webkit-transition: all 0.5s ease-out;
	-moz-transition: all 0.5s ease-out;
	-o-transition: all 0.5s ease-out;
	-ms-transition: all 0.5s ease-out;
	transition: all 0.5s ease-out;
}

.number-dot.owl-carousel .owl-dots .owl-dot.active span {
	min-width: 50px;
}

.number-dot .owl-dots .owl-dot.active:before {
	color: #262423;
}

.number-dot .owl-dots .owl-dot:hover:before {
	color: #262423;
}


html {
    scroll-behavior: smooth;
}



     .testimonial-slider .owl-carousel .owl-nav {
        position: absolute;
        top: 50%;
        width: 100%;
        transform: translateY(-50%);
        display: flex;
        justify-content: space-between;
    } 
     .testimonial-slider .owl-carousel .owl-nav .owl-prev,
    .testimonial-slider .owl-carousel .owl-nav .owl-next {
        /* background-color: #fff; */
        /* border-radius: 50%; */
        width: 40px;
        height: 40px;
        display: flex;
        align-items: center;
        justify-content: center;
        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    } 
    .testimonial-1-thumb .owl-item img {
        /* border-radius: 50%; */
        width: 60px;
        height: 60px;
        object-fit: cover;
        border: 2px solid #ddd;
        transition: transform 0.3s;
    }
    .testimonial-1-thumb .owl-item.current img {
        /* border-color: #007bff; */
        transform: scale(1.1);
    }
	.mult-select-tag {
		display: flex
	;
		width: 100%;
		flex-direction: column;
		align-items: center;
		position: relative;
		/* --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1); */
		/* --tw-shadow-color: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color); */
		/* --border-color: rgb(218, 221, 224); */
		font-family: Verdana, sans-serif;
	}


	.mult-select-tag .rounded {
		border-radius: 0px;
	}

	.rounded {
		border-radius: 0px;
	}

	.mult-select-tag .body {
		display: flex
	;
		/* border: 1px solid var(--border-color); */
		background: #fff;
		min-height: 2.15rem;
		width: 100%;
		min-width: 14rem;
	}



	h2{
  text-align:center;
  padding: 20px;
}
/* Slider */

.slick-slide {
    margin: 0px 20px;
}

.slick-slide img {
    width: 100%;
}

.slick-slider
{
    position: relative;
    display: block;
    box-sizing: border-box;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
            user-select: none;
    -webkit-touch-callout: none;
    -khtml-user-select: none;
    -ms-touch-action: pan-y;
        touch-action: pan-y;
    -webkit-tap-highlight-color: transparent;
}

.slick-list
{
    position: relative;
    display: block;
    overflow: hidden;
    margin: 0;
    padding: 0;
}
.slick-list:focus
{
    outline: none;
}
.slick-list.dragging
{
    cursor: pointer;
    cursor: hand;
}

.slick-slider .slick-track,
.slick-slider .slick-list
{
    -webkit-transform: translate3d(0, 0, 0);
       -moz-transform: translate3d(0, 0, 0);
        -ms-transform: translate3d(0, 0, 0);
         -o-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);
}

.slick-track
{
    position: relative;
    top: 0;
    left: 0;
    display: block;
}
.slick-track:before,
.slick-track:after
{
    display: table;
    content: '';
}
.slick-track:after
{
    clear: both;
}
.slick-loading .slick-track
{
    visibility: hidden;
}

.slick-slide
{
    display: none;
    float: left;
    height: 100%;
    min-height: 1px;
}
[dir='rtl'] .slick-slide
{
    float: right;
}
.slick-slide img
{
    display: block;
}
.slick-slide.slick-loading img
{
    display: none;
}
.slick-slide.dragging img
{
    pointer-events: none;
}
.slick-initialized .slick-slide
{
    display: block;
}
.slick-loading .slick-slide
{
    visibility: hidden;
}
.slick-vertical .slick-slide
{
    display: block;
    height: auto;
    border: 1px solid transparent;
}
.slick-arrow.slick-hidden {
    display: none;
}

/* .dropdown-menu */

.multi-select {
    display: flex;
    box-sizing: border-box;
    flex-direction: column;
    position: relative;
    width: 100%;
    user-select: none;
	background-color: #FFF;
    font-family: 'Raleway', sans-serif;
  }
  .multi-select .multi-select-header {
    /* border: 1px solid #dee2e6; */
    padding: 7px 30px 7px 12px;
    overflow: hidden;
    gap: 7px;
    min-height: 40px;
  }
/* ... */

